--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
-  background-image:  url('../img/logo.png');
-  background-repeat: no-repeat;
+  background:url('../img/logo.png') no-repeat;
 }
 
 h1 {
