--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,15 @@ body {
 h1 {
   text-align: center;
   color: yellow;
-  font-size: 32px;
-  text-transform: uppercase;
+  font-size: 33px;
+  text-transform: lowercase;
 }
 
 p {
   text-transform: capitalize;
   text-align: center;
   color: white;
-  font-size: 24px;
+  font-size: 1.4em;
 }
 
 .wrapper {
@@ -21,5 +21,5 @@ p {
 }
 
 .first {
-  text-indent: 100px;
+  font: italic small-caps 900 1.4em Helvetica;
 }
