CSS Tutorials #13 - Min and Max Width and Height To Control Your Elements

--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,10 @@ p {
   border: 10px dashed #333;
   margin: 50px auto;
   background: white;
-  width: 400px;
-  height: 400px;
+  width: 80%;
+  max-width: 800px;
+  min-width: 400px;
+  min-height: 200px;
   padding: 40px;
 }
 
